--- a/backendmap/css/index.css
+++ b/backendmap/css/index.css
@@ -11,6 +11,69 @@ body,html{
 }
 
 
+#legenddiv{
+		position: absolute;
+        z-index: 999;
+        top: 30px;
+        right: 0px;
+        background: transparent;
+        color: #FFFFFF;
+}
+
+#demoselector{
+        width: 100%;
+        height: 40px;
+        position: absolute;
+        z-index: 999;
+        overflow: hidden;
+        bottom: 0px;
+        left: 0px;
+        background: #000000;
+        color: #FFFFFF;
+}
+
+
+.legendCells .label{
+	color: #FFFFFF;
+	fill: #FFFFFF;
+}
+
+#demoselectorpadded{
+        padding-top: 5px;
+        padding-bottom: 5px;
+        padding-left: 30px;
+        padding-right: 30px;
+        margin: 0px;
+}
+
+#demoselectorpadded h4{
+        font: 20px Helvetica, sans-serif;
+        line-height: 30px;
+        margin: 0px;
+        margin-right: 20px;
+        display: block;
+        float: left;
+}
+
+#demoselectorpadded select{
+        display: block;
+        float: left;
+        height: 30px;
+        line-height: 30px;
+        font: 22px Helvetica, sans-serif;
+}
+
+#filter{
+	position: absolute;
+	top: 10px;
+	right: 10px;
+	padding: 15px;
+	background: rgba(255,255,255,0.6);
+	font: 14px Helvetica,sans-serif;
+	color: #000000;
+	z-index: 150;
+}
+
 /* Safari 4.0 - 8.0 */
 @-webkit-keyframes fadecolorblacktored {
   0%   {color: black;}
@@ -104,6 +167,10 @@ body,html{
 	display: none;
 }
 
+.itemlabel{
+	margin-left: 20px;
+}
+
 .head1{
 	margin-bottom: 20px;
 	padding: 30px;
@@ -120,7 +187,7 @@ body,html{
 
 .head3{
 	margin-bottom: 7px;
-	padding: 30px;
+	padding: 20px;
 	color: #FFFFFF;
 	font: 22px 'Work Sans','Helvetica Neue', sans-serif;
 }
@@ -198,6 +265,7 @@ body,html{
 	border: 0px;
 	padding: 20px;
 	margin: 20px;
+	margin-top: 0px;
 }
 
 .submitbutton{
